--- a/langsadev/package.json
+++ b/langsadev/package.json
@@ -14,7 +14,8 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "autoprefixer": "^10.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
