--- a/langsadev/package.json
+++ b/langsadev/package.json
@@ -17,6 +17,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19", 
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
